--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #85C3E8;
+  padding: 1.5rem;
 }
 
 code {
