--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
   box-shadow: 2px 2px 8px 0px rgba(0, 0, 50, 0.75);
 }
 
-.approveButtons {
+.buttonRow {
   display: flex;
   justify-content: space-evenly;
 }
