--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,3 +31,21 @@
 .splitInput .right {
   margin-right: 18pt;
 }
+
+.category-item {
+  display: flex;
+}
+
+.category-item-name {
+ flex-basis: 75%
+}
+
+@media (max-width: 400px) {
+  .category-item {
+    flex-direction: column;
+  }
+
+  .category-item-name {
+    margin-bottom: .5em;
+  }
+}
